--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,12 @@
             android:layout_height="wrap_content"
             android:text="sample 7" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnSample8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="sample 8" />
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
